--- a/src/app/features/events/event-types/event-type-form.component.scss
+++ b/src/app/features/events/event-types/event-type-form.component.scss
@@ -14,6 +14,7 @@
     mat-form-field {
         width: 100%;
         transition: all theme.$transition-normal ease-in-out;
+        margin-top: 20px;
 
         &:focus-within {
             .mat-mdc-text-field-wrapper {
