--- a/src/app/features/organizations/list/organization-list.component.html
+++ b/src/app/features/organizations/list/organization-list.component.html
@@ -1,9 +1,14 @@
 <div class="list-container">
     <div class="header">
         <h1>{{ 'MENU.ORGANIZATIONS' | translate }}</h1>
-        <button mat-raised-button color="primary" (click)="openForm()">
-            <mat-icon>add</mat-icon> {{ 'COMMON.CREATE_NEW' | translate }}
-        </button>
+        <div>
+            <button mat-raised-button color="accent" (click)="switchOrganization()" style="margin-right: 8px;">
+                <mat-icon>swap_horiz</mat-icon> {{ 'ORGANIZATIONS.SWITCH' | translate }}
+            </button>
+            <button mat-raised-button color="primary" (click)="openForm()">
+                <mat-icon>add</mat-icon> {{ 'COMMON.CREATE_NEW' | translate }}
+            </button>
+        </div>
     </div>
 
     <mat-form-field appearance="outline" class="filter-field">
@@ -13,6 +18,15 @@
 
     <div class="mat-elevation-z8 table-container">
         <table mat-table [dataSource]="dataSource" matSort>
+
+            <!-- Image Column -->
+            <ng-container matColumnDef="image">
+                <th mat-header-cell *matHeaderCellDef> {{ 'COMMON.IMAGE' | translate }} </th>
+                <td mat-cell *matCellDef="let row">
+                    <img [src]="row.imagePath || 'assets/images/default-org.png'" alt="Organization Logo"
+                        class="org-logo-small" onerror="this.src='assets/images/default-org.png'">
+                </td>
+            </ng-container>
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
