--- a/src/app/features/players/list/player-list.component.html
+++ b/src/app/features/players/list/player-list.component.html
@@ -11,55 +11,98 @@
         <input matInput (keyup)="applyFilter($event)" [placeholder]="'COMMON.SEARCH_PLACEHOLDER' | translate" #input>
     </mat-form-field>
 
-    <div class="mat-elevation-z8 table-container">
-        <table mat-table [dataSource]="dataSource" matSort>
+    <mat-tab-group animationDuration="0ms" mat-stretch-tabs="false" mat-align-tabs="start">
+        <!-- Cards Tab -->
+        <mat-tab [label]="'Cards'">
+            <div class="cards-container">
+                <div class="player-card" *ngFor="let player of dataSource.filteredData" (click)="openForm(player)">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <div class="card-header">
+                                <span class="player-role">{{ getRoleName(player.roleId) }}</span>
+                                <span class="player-rating">{{ player.skill }}</span>
+                            </div>
+                            <div class="player-image-container">
+                                <img [src]="player.imagePath || 'default_player.jpg'"
+                                    onerror="this.onerror=null; this.src='default_player.jpg'" alt="">
+                            </div>
+                            <div class="card-footer">
+                                <h3 class="player-name">{{ player.name }}</h3>
+                                <div class="player-stats">
+                                    <div class="stat">
+                                        <span class="label">PHY</span>
+                                        <span class="value">{{ player.physique }}</span>
+                                    </div>
+                                    <div class="stat">
+                                        <span class="label">SKL</span>
+                                        <span class="value">{{ player.skill }}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="no-data" *ngIf="dataSource.filteredData.length === 0">
+                    <p>{{ 'COMMON.NO_DATA' | translate }} "{{input.value}}"</p>
+                </div>
+            </div>
+        </mat-tab>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'COMMON.NAME' | translate }} </th>
-                <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-            </ng-container>
+        <!-- List Tab -->
+        <mat-tab [label]="'List'">
+            <div class="mat-elevation-z8 table-container">
+                <table mat-table [dataSource]="dataSource" matSort>
 
-            <!-- Role Column -->
-            <ng-container matColumnDef="role">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'PLAYERS.POSITION' | translate }} </th>
-                <td mat-cell *matCellDef="let row"> {{getRoleName(row.roleId)}} </td>
-            </ng-container>
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="name">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'COMMON.NAME' | translate }} </th>
+                        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+                    </ng-container>
 
-            <!-- Skill Column -->
-            <ng-container matColumnDef="skill">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Skill </th>
-                <td mat-cell *matCellDef="let row"> {{row.skill}} </td>
-            </ng-container>
+                    <!-- Role Column -->
+                    <ng-container matColumnDef="role">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'PLAYERS.POSITION' | translate }}
+                        </th>
+                        <td mat-cell *matCellDef="let row"> {{getRoleName(row.roleId)}} </td>
+                    </ng-container>
 
-            <!-- Physique Column -->
-            <ng-container matColumnDef="physique">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Physique </th>
-                <td mat-cell *matCellDef="let row"> {{row.physique}} </td>
-            </ng-container>
+                    <!-- Skill Column -->
+                    <ng-container matColumnDef="skill">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Skill </th>
+                        <td mat-cell *matCellDef="let row"> {{row.skill}} </td>
+                    </ng-container>
 
-            <!-- Actions Column -->
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef> {{ 'COMMON.ACTIONS' | translate }} </th>
-                <td mat-cell *matCellDef="let row">
-                    <button mat-icon-button color="primary" (click)="openForm(row)">
-                        <mat-icon>edit</mat-icon>
-                    </button>
-                    <button mat-icon-button color="warn" (click)="deletePlayer(row.id)">
-                        <mat-icon>delete</mat-icon>
-                    </button>
-                </td>
-            </ng-container>
+                    <!-- Physique Column -->
+                    <ng-container matColumnDef="physique">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Physique </th>
+                        <td mat-cell *matCellDef="let row"> {{row.physique}} </td>
+                    </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    <!-- Actions Column -->
+                    <ng-container matColumnDef="actions">
+                        <th mat-header-cell *matHeaderCellDef> {{ 'COMMON.ACTIONS' | translate }} </th>
+                        <td mat-cell *matCellDef="let row">
+                            <button mat-icon-button color="primary" (click)="openForm(row); $event.stopPropagation()">
+                                <mat-icon>edit</mat-icon>
+                            </button>
+                            <button mat-icon-button color="warn"
+                                (click)="deletePlayer(row.id); $event.stopPropagation()">
+                                <mat-icon>delete</mat-icon>
+                            </button>
+                        </td>
+                    </ng-container>
 
-            <!-- Row shown when there is no matching data. -->
-            <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="5">{{ 'COMMON.NO_DATA' | translate }} "{{input.value}}"</td>
-            </tr>
-        </table>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of players"></mat-paginator>
-    </div>
+                    <!-- Row shown when there is no matching data. -->
+                    <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="5">{{ 'COMMON.NO_DATA' | translate }} "{{input.value}}"</td>
+                    </tr>
+                </table>
+
+                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of players"></mat-paginator>
+            </div>
+        </mat-tab>
+    </mat-tab-group>
 </div>
